// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tag ui default 1`] = `
<div>
  <span
    class="tag"
  >
    Maarten
  </span>
</div>
`;

exports[`Component: Tag ui with remove 1`] = `
<div>
  <span
    class="tag"
  >
    Maarten
    <span
      class="close-button"
      role="button"
    >
      ×
    </span>
  </span>
</div>
`;
